# SmartSpeaker

./: Dockerfile  Makefile  README.md  armBuild.sh  config.ini  meson.build
genie/opt/etc/: group  passwd  shadow  sshd_config
genie/opt/genie/: config.ini  pulseaudio
genie/opt/genie/assets/: hey-genie__en_raspberry-pi_2021-11-18-utc_v1_9_0.ppn  hey-homie__en_raspberry-pi_2021-11-27-utc_v1_9_0.ppn  yo-homie__en_raspberry-pi_2021-12-02-utc_v1_9_0.ppn
genie/opt/genie/lib/: libFLAC.so.8  libgstaudio-1.0.so.0  libgstbase-1.0.so.0  libgstpbutils-1.0.so.0  libgstreamer-1.0.so.0  libgstriff-1.0.so.0  libgsttag-1.0.so.0  libgstvideo-1.0.so.0  libjson-glib-1.0.so.0  libkeyutils.so.1  libogg.so.0  libpthread.so.0  libpulse-simple.so.0  libpulse.so.0  libsoup-2.4.so.1  libspeexdsp.so.1  libtdb.so.1  libwebrtc_audio_processing.so.1
genie/opt/genie/lib/gstreamer-1.0/: gst-plugin-scanner
include/: EnumInterator.hpp  EnumIterator.hpp  app.hpp  config.hpp  evinput.hpp  leds.hpp
include/audio/: audio.hpp  audiodriver.hpp  audioinput.hpp  audioplayer.hpp  audiovolume.hpp  wakeword.hpp
include/audio/alsa/: audiofifo.hpp  input.hpp  volume.hpp
include/audio/pulseaudio/: input.hpp  volume.hpp
include/state/: config.hpp  disabled.hpp  events.hpp  listening.hpp  processing.hpp  saying.hpp  sleeping.hpp  state.hpp
lib/: Readme.txt  SmartResponseXEmt.cpp  arm-linux-gnueabihf.txt  libc.so.6  libffi.so.6  libgcc_s.so.1  libgio-2.0.so.0  libgobject-2.0.so.0  libm.so.6  libmount.so.1  libpcre.so.3  libpthread.so.0  libstdc++.so.6
scripts/: cross_file.txt
src/: Dockerfile  EnumIterator.cpp  app.cpp  app.hpp  config.cpp  config.hpp  evinput.cpp  leds.cpp  leds.hpp  main.cpp  meson.build
src/audio/: audioinput.cpp  audioplayer.cpp  audiovolume.cpp  wakeword.cpp
src/audio/alsa/: audiofifo.cpp  input.cpp  volume.cpp
src/audio/pulseaudio/: input.cpp  volume.cpp
src/state/: config.cpp  disabled.cpp  listening.cpp  processing.cpp  saying.cpp  sleeping.cpp  state.cpp
test/: glibcTest.c
test/pac/: Makefile  pac.cpp
test/pap/: Makefile  pap.cpp
